# vvpx

./: CMakeLists.txt  README.md  TEMP_PLAN.md  TEMP_SUMMARY.md  test_vids.bat
.github/workflows/: build.yml
config/linux_x64/: vpx_config.h
test/videos/: vp8_320x240_30fps.ivf  vp8_640x480.ivf  vp9_320x240_30fps.ivf  vp9_60fps.ivf  vp9_64x64_tiny.ivf  vp9_720p.ivf  vp9_colorbars.ivf  vp9_high_quality.ivf  vp9_low_quality.ivf  vp9_noise.ivf  vp9_odd_dimensions.ivf  vp9_single_frame.ivf  vp9_solid_blue.ivf
